# BirdBox

./: .gitignore  CLAUDE.md  CMakeLists.txt  FSD_BirdBox.md  LICENSE  README.md  SESSION_NOTES.md  TODO.md  ev2.json  partitions-esp32.csv  partitions-esp32s3.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
.github/workflows/: release.yml
docs/: MODEL.md  README.md
main/: CMakeLists.txt  board_config.h  camera.c  camera.h  capture.c  capture.h  cities_data.h  classify.c  classify.cpp  classify.h  claude.c  claude.h  cloud.c  cloud.h  cloud_util.c  cloud_util.h  gemini.c  gemini.h  i18n.txt  idf_component.yml  illum.c  illum.h  inat.c  inat.h  inat_roots.pem  logo_data.h  main.c  motion.c  motion.h  settings.c  settings.h  species_i18n.c  species_i18n.h  stats.c  stats.h  storage.c  storage.h  target_species.c  target_species.h  version.h  (+4 more)
tools/: convert_model_int8.py  verify_fastburst.sh
training-data/: .gitignore  README.md  export-labels.ps1  inat_backbone.py  pull-new-captures.ps1  requirements.txt  train.py
