idf_component_register(
    SRCS
        "main.c"
        "wifi.c"
        "web_server.c"
        "camera.c"
        "motion.c"
        "capture.c"
        "illum.c"
        "classify.cpp"
        "settings.c"
        "storage.c"
        "stats.c"
        "species_i18n.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_driver_gpio
        esp_driver_tsens
        esp_http_server
        esp_timer
        app_update
        esp_https_ota
        esp_http_client
        mbedtls
        log
        fatfs
        sdmmc
        esp_driver_sdmmc
)
