idf_component_register(
    SRCS
        "main.c"
        "wifi.c"
        "web_server.c"
        "camera.c"
        "motion.c"
        "capture.c"
        "illum.c"
        "classify.cpp"
        "cloud_util.c"
        "claude.c"
        "gemini.c"
        "inat.c"
        "cloud.c"
        "settings.c"
        "storage.c"
        "stats.c"
        "species_i18n.c"
        "target_species.c"
    INCLUDE_DIRS "."
    EMBED_TXTFILES
        "inat_roots.pem"   # pinned iNat root CAs (v2.64) — see inat.c
        "i18n.txt"         # UI language x-ref, EN master + NO (v2.72) — served at /i18n.txt
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_driver_gpio
        esp_driver_tsens
        esp_http_server
        esp_timer
        app_update
        esp_https_ota
        esp_http_client
        mbedtls
        log
        fatfs
        sdmmc
        esp_driver_sdmmc
)
